[gd_scene load_steps=17 format=2]

[ext_resource path="res://content/weapons/obelisk/KillstreakEffect.gd" type="Script" id=1]
[ext_resource path="res://content/weapons/obelisk/img/killstreakStatic.png" type="Texture" id=3]
[ext_resource path="res://content/sounds/Weapons/obelisk/bzzt.wav" type="AudioStream" id=4]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=5]
[ext_resource path="res://content/sounds/Weapons/obelisk/killstreak_pulse.wav" type="AudioStream" id=6]
[ext_resource path="res://content/sounds/Weapons/obelisk/killstreak_activate.wav" type="AudioStream" id=7]
[ext_resource path="res://content/sounds/Weapons/obelisk/killstreak_end.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 158, 158, 158 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 158, 158, 158, 158 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 316, 158, 158, 158 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 158, 158 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 158, 0, 158, 158 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 316, 0, 158, 158 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 474, 0, 158, 158 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 13 ) ],
"loop": false,
"name": "vanish",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "static",
"speed": 10.0
} ]

[node name="KillstreakEffect" type="Node2D"]
script = ExtResource( 1 )

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 1 )

[node name="Static" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "vanish"

[node name="ArcSFX" parent="." instance=ExtResource( 5 )]
bus = "Sounds"
streams = [ ExtResource( 4 ) ]

[node name="PulseSFX" parent="." instance=ExtResource( 5 )]
bus = "Sounds"
streams = [ ExtResource( 6 ) ]

[node name="EndSFX" parent="." instance=ExtResource( 5 )]
volume_db = 17.333
bus = "Sounds"
streams = [ ExtResource( 8 ) ]

[node name="StartSFX" parent="." instance=ExtResource( 5 )]
bus = "Sounds"
streams = [ ExtResource( 7 ) ]

[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
[connection signal="area_exited" from="HitArea" to="." method="_on_HitArea_area_exited"]
